<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margem"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:ignore="UseSwitchCompatOrMaterialXml">


    <TextView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:text="@string/nome"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapCharacters"
        android:minHeight="48dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:text="@string/sexo"
        android:textColor="@android:color/white" />

    <RadioGroup
        android:id="@+id/rdgSexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rdbMasc"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:text="@string/masc" />

        <RadioButton
            android:id="@+id/rdbFem"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:text="@string/fem" />

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:text="@string/email"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:text="@string/tel"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/edtTel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"  />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:text="@string/pref"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/margem"
        android:layout_marginTop="@dimen/margem">

        <CheckBox
            android:id="@+id/ckbMusica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/musica" />

        <CheckBox
            android:id="@+id/ckbCinema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cinema" />

        <CheckBox
            android:id="@+id/ckbEsporte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/esporte" />

        <CheckBox
            android:id="@+id/ckbGastronomia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gastronomia" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:text="@string/notif"
        android:textColor="@android:color/white" />

    <Switch
        android:id="@+id/swtNotif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/on"
        android:textOff="@string/off"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margem"
        android:layout_marginBottom="@dimen/margem"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnExibir"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/exibir" />

        <Button
            android:id="@+id/btnLimpar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/limpar" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnlExibir"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"
        android:padding="@dimen/margem"
        android:background="@color/colorAccent">

        <TextView
            android:id="@+id/txtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txtSexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/txtTel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"/>

        <LinearLayout
            android:id="@+id/lnlCheck"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtMusica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/txtCinema"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/txtGastronomia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"/>

        </LinearLayout>

        <TextView
            android:id="@+id/txtNotif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"/>

    </LinearLayout>


</LinearLayout>















